--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body { margin: 0; font-size: 1em; line-height: 1.5em; font-family: "Garamond", G
 ::-moz-selection { background: #333333; color: #333333; }
 ::selection { background: #333333; color: #fff;}
 
+
 /* =============================================================================
    Layout
    ========================================================================== */
@@ -46,7 +47,8 @@ header	{text-align: center;width:100%;margin:0 auto; text-transform:uppercase;}
 #main p	{width:48%;float:left;}
 #main p.about	{margin-right: 4%;}
 footer	{width:100%;margin:0 auto ;}
-
+.robes {width:100%; height 32:;}
+.robes span {display:block; margin:0 auto;background:url(../images/DoctorRobes-short.png); width:32px;height:13px;}
 /* =============================================================================
    Links
    ========================================================================== */
@@ -62,21 +64,21 @@ a img {border: none;vertical-align: bottom;}
 .email-link span a span	{display: none;}*/
 /*.email-link span:before,.email-link span:after {content:"";position:absolute;z-index:-1;bottom:28%;left:1%;width:49%;height:30%;max-width:100%;-webkit-transform:rotate(-4deg);-moz-transform:rotate(-4deg);-o-transform:rotate(-4deg);transform:rotate(-4deg);}*/
 /*.email-link span:after{right:1%;left:auto;-webkit-transform:rotate(4deg);-moz-transform:rotate(4deg);-o-transform:rotate(4deg);transform:rotate(4deg);}*/
-a.button-email	{display: block; clear:both;}
+a.footer-email	{display: block; clear:both;text-align:center; border-bottom:none;}
 ul, li	{margin: 0;padding: 0;list-style: none;}
-.external-links	{width:448px;height:88px;margin:0 auto;}
-.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr	{display: block;width:88px;height:88px;float: left;border-bottom: none;text-indent: -9999px;margin: 0 12px;}
+.external-links	{width:100%;height:88px;margin:0 auto;}
+.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, .button-email	{display: block;min-width:100px;width:120px;height:88px;float: left;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
+.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email	{display:none;}
 .button-twitter	 {background:url(../images/twitter.png) no-repeat center center;}
 .button-facebook	 {background:url(../images/facebook.png) no-repeat center center;}
 .button-illinois {background:url(../images/Illinois.png) no-repeat center center;}
 .button-flickr	 {background:url(../images/flickr.png) no-repeat center center;}
 .button-linkedin {background:url(../images/linkedin.png) no-repeat center center;}
-.button-twitter:hover	{background:url(../images/twitter.png) no-repeat center center;opacity: 0.5;}
-.button-facebook:hover	{background:url(../images/facebook.png) no-repeat center center;opacity: 0.5;}
-.button-illinois:hover	{background:url(../images/I
-llinois.png) no-repeat center center;opacity: 0.5;}
-.button-flickr:hover	{background:url(../images/flickr.png) no-repeat center center;opacity: 0.5;}
-.button-linkedin:hover	{background:url(../images/linkedin.png) no-repeat center center;opacity: 0.5;}
+.button-twitter:hover	{background:url(../images/twitter.png) no-repeat center center;}
+.button-facebook:hover	{background:url(../images/facebook.png) no-repeat center center;}
+.button-illinois:hover	{background:url(../images/Illinois.png) no-repeat center center;}
+.button-flickr:hover	{background:url(../images/flickr.png) no-repeat center center;}
+.button-linkedin:hover	{background:url(../images/linkedin.png) no-repeat center center;}
 
 
 
@@ -88,11 +90,7 @@ small { font-size: 0.85em;line-height:1.5em; }
 p	{font-size:1.1em /*16px*/;line-height:1.5em /*24px*/;margin:0 0 1.5em /*24px*/;}
 h1,h2 {color:#333333;margin: 0 0 10px;padding:0;text-transform: uppercase;text-align:center;}
 h1 {font-size: 3em;line-height:1em;padding:24px 0;margin: 0 auto;font-family:Garamond, Georgia; serif;}
-h2 {font-size: 1.5em;line-height:1em;padding:0;margin:0 0 8%;display: table;}
-h2 > span, h2:before, h2:after {display: table-cell;}
-h2:before, h2:after {background: url(../images/divider.png) repeat-x center;width: 50%;content: ' ';}
-h2 > span {white-space: nowrap;padding: 0 24px;}
-h2 span span	{padding: 0 12px;}
+
 
 /* =============================================================================
    Contain floats
@@ -145,7 +143,7 @@ and (max-width : 450px) {
 	a	{color:#333333; border-bottom:1px solid #333333;}
 	a:hover	{color:#cc1177 !important; border-bottom:none;}
 	.wrap	{max-width:550px;margin:0 auto;padding:0;background:#fff;}
-	header	{border-bottom:1px solid #333333;margin:0 0 4%;}
+	header	{border-bottom:1px solid #333333;margin:0 0 4%; padding-top:4%}
 	.logo	{width:100%;background:#fff url(../images/logo-dark.png) no-repeat center center;background-size: 10%;padding:4% 0;margin:0;}
 	.logo span	{display: none;}
 	div#main p	{width:87%;float:none;margin: 0 auto;}
@@ -156,8 +154,9 @@ and (max-width : 450px) {
 	h2:before, h2:after {background: none;}
 	footer	{text-align: left;}
 	.external-links	{width:100%;height:auto;margin:0 auto;}
-	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:6% 6%;color:#333333;}
-	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email span	{position:absolute;right:10%;}
-	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, .button-email:hover	{background:#ffffff !important;color:#cc1177 !important;background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
+	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
+	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email span	{position:absolute;right:10%; display:inline;}
+	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, .button-email:hover	{background:#ffffff; color:#cc1177; background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
+       a.footer-email {display:none;}
 
 }
