--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header	{text-align: center;width:100%;margin:0 auto; text-transform:uppercase;}
 #main	{width:100%;margin:0 auto 6%;}
 #main p	{width:48%;float:left;}
 #main p.about	{margin-right: 4%;}
-footer	{width:100%;margin:0 auto ;}
+footer	{width:100%;margin:0 auto ; text-align:center;}
 .robes {width:100%; height 32:;}
 .robes span {display:block; margin:0 auto;background:url(../images/DoctorRobes-short.png); width:32px;height:13px;}
 /* =============================================================================
@@ -64,21 +64,24 @@ a img {border: none;vertical-align: bottom;}
 .email-link span a span	{display: none;}*/
 /*.email-link span:before,.email-link span:after {content:"";position:absolute;z-index:-1;bottom:28%;left:1%;width:49%;height:30%;max-width:100%;-webkit-transform:rotate(-4deg);-moz-transform:rotate(-4deg);-o-transform:rotate(-4deg);transform:rotate(-4deg);}*/
 /*.email-link span:after{right:1%;left:auto;-webkit-transform:rotate(4deg);-moz-transform:rotate(4deg);-o-transform:rotate(4deg);transform:rotate(4deg);}*/
-a.footer-email	{display: block; clear:both;text-align:center; border-bottom:none;}
-ul, li	{margin: 0;padding: 0;list-style: none;}
-.external-links	{width:100%;height:88px;margin:0 auto;}
-.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, .button-email	{display: block;min-width:100px;width:120px;height:88px;float: left;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
+
+
+a.footer-email	{display: block;text-align:center; border-bottom:none;clear:left;}
+li.footer-email { width:100%; }
+ul, li	{margin: 10px 0;padding: 0;list-style: none; display:inline-block;}
+.external-links	{width:100%;height:88px;margin:0 auto;text-align:center;}
+.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, .button-email	{display:inline-block;min-width:100px;width:120px;height:88px;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
 .button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email	{display:none;}
 .button-twitter	 {background:url(../images/twitter.png) no-repeat center center;}
 .button-facebook	 {background:url(../images/facebook.png) no-repeat center center;}
 .button-illinois {background:url(../images/Illinois.png) no-repeat center center;}
 .button-flickr	 {background:url(../images/flickr.png) no-repeat center center;}
-.button-linkedin {background:url(../images/linkedin.png) no-repeat center center;}
+.button-linkedin {background:url(../images/linkedin.png) no-repeat center center; }
 .button-twitter:hover	{background:url(../images/twitter.png) no-repeat center center;}
 .button-facebook:hover	{background:url(../images/facebook.png) no-repeat center center;}
 .button-illinois:hover	{background:url(../images/Illinois.png) no-repeat center center;}
 .button-flickr:hover	{background:url(../images/flickr.png) no-repeat center center;}
-.button-linkedin:hover	{background:url(../images/linkedin.png) no-repeat center center;}
+.button-linkedin:hover	{background:url(../images/linkedin-pink.png) no-repeat center center; -webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;}
 
 
 
@@ -135,6 +138,10 @@ html.lt-ie8	{background-color:#fff;background-image:none;}
 /* =============================================================================
    Media queries (Smartphones only)
    ========================================================================== */
+@media only screen
+and (max-width : 715px) {
+         .external-links {width: 370px;}
+}
 
 @media only screen
 and (max-width : 450px) {
@@ -148,13 +155,14 @@ and (max-width : 450px) {
 	.logo span	{display: none;}
 	div#main p	{width:87%;float:none;margin: 0 auto;}
 	div#main p.about	{margin: 0 auto 4%;}
-	h1 {font-size: 2.5em;line-height:1em;padding:6% 0 2%;margin: 0 auto;font-family:"Garamond", Georgia, serif;}
+	h1 {font-size: 2.5em;line-height:1em;padding:6% 4% 2%;margin: 0 auto;font-family:"Garamond", Georgia, serif;}
 	h2 {font-size: 1em;line-height:1em;padding:0;margin:0 0 6%;text-align: center;display: table;}
 	h2 span span	{padding: 0 6px;}
 	h2:before, h2:after {background: none;}
 	footer	{text-align: left;}
+        ul,li {display:block; margin: 0;}
 	.external-links	{width:100%;height:auto;margin:0 auto;}
-	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
+	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;border-top: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
 	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email span	{position:absolute;right:10%; display:inline;}
 	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, .button-email:hover	{background:#ffffff; color:#cc1177; background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
        a.footer-email {display:none;}
