--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ li.footer-email { width:100%; }
 ul, li	{margin: 10px 0;padding: 0;list-style: none; display:inline-block;}
 .external-links	{width:100%;height:88px;margin:0 auto;text-align:center;}
 .button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, .button-email	{display:inline-block;min-width:100px;width:120px;height:88px;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
-.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email	{display:none;}
+.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, li.button-email	{display:none;}
 .button-twitter	 {background:url(../images/twitter.png) no-repeat center center;}
 .button-facebook	 {background:url(../images/facebook.png) no-repeat center center;}
 .button-illinois {background:url(../images/Illinois.png) no-repeat center center;}
@@ -81,7 +81,7 @@ ul, li	{margin: 10px 0;padding: 0;list-style: none; display:inline-block;}
 .button-facebook:hover	{background:url(../images/facebook.png) no-repeat center center;}
 .button-illinois:hover	{background:url(../images/Illinois.png) no-repeat center center;}
 .button-flickr:hover	{background:url(../images/flickr.png) no-repeat center center;}
-.button-linkedin:hover	{background:url(../images/linkedin-pink.png) no-repeat center center; -webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;}
+.button-linkedin:hover	{background:url(../images/linkedin.png) no-repeat center center; -webkit-transition: all 0.3s ease-in-out;-moz-transition: all 0.3s ease-in-out;transition: all 0.3s ease-in-out;}
 
 
 
@@ -165,6 +165,6 @@ and (max-width : 450px) {
 	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;border-top: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
 	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email span	{position:absolute;right:10%; display:inline;}
 	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, .button-email:hover	{background:#ffffff; color:#cc1177; background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
-       a.footer-email {display:none;}
+       li.footer-email {display:none;}
 
 }
