--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ a.footer-email	{display: block;text-align:center; border-bottom:none;clear:left;
 li.footer-email { width:100%; }
 ul, li	{margin: 10px 0;padding: 0;list-style: none; display:inline-block;}
 .external-links	{width:100%;height:88px;margin:0 auto;text-align:center;}
-.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, .button-email	{display:inline-block;min-width:100px;width:120px;height:88px;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
+.button-behance, .button-dribble, .button-twitter, .button-linkedin, .button-illinois, .button-facebook, .button-flickr, a.button-email	{display:inline-block;min-width:100px;width:120px;height:88px;border-bottom: none;/*text-indent: -9999px*/margin: 0;text-align:center;text-transform:uppercase;}
 .button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, li.button-email	{display:none;}
 .button-twitter	 {background:url(../images/twitter.png) no-repeat center center;}
 .button-facebook	 {background:url(../images/facebook.png) no-repeat center center;}
@@ -160,11 +160,10 @@ and (max-width : 450px) {
 	h2 span span	{padding: 0 6px;}
 	h2:before, h2:after {background: none;}
 	footer	{text-align: left;}
-        ul,li {display:block; margin: 0;}
+        ul,li,li.button-email {display:block; margin: 0;}
 	.external-links	{width:100%;height:auto;margin:0 auto;}
-	.button-twitter, .button-linkedin, .button-behance, .button-dribbble, .button-facebook, .button-illinois, .button-flickr, .button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;border-top: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
-	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, .button-email span	{position:absolute;right:10%; display:inline;}
-	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, .button-email:hover	{background:#ffffff; color:#cc1177; background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
+	.button-twitter, .button-linkedin, .button-facebook, .button-illinois, .button-flickr, a.button-email	{width:88%;height:auto;background-image:none;display: block;float: none;border-bottom: 1px solid #dfdfdf;border-top: 1px solid #dfdfdf;margin: 0;text-indent: 0;padding:4% 6%;color:#333333; text-align:left;}
+	.button-twitter span, .button-linkedin span, .button-behance span, .button-dribbble span, .button-facebook span, .button-illinois span, .button-flickr span, a.button-email span, .button-email span	{position:absolute;right:10%; display:inline;}
+	.button-twitter:hover, .button-behance:hover, .button-linkedin:hover, .button-dribbble:hover, .button-facebook:hover, .button-illinois:hover, .button-flickr:hover, a.button-email:hover	{background:#ffffff; color:#cc1177; background-image:none;opacity: 1;border-bottom: 1px solid #dfdfdf}
        li.footer-email {display:none;}
-
 }
